Added HotelControllerIntegrationTest